# ModernVulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  make-clangd-json.sh  make.sh  shaders.sh
Modules/Logging/: Logging.cc
Modules/Vulkan/: Buffers.cc  Command.cc  Descriptors.cc  GraphicsPipeline.cc  Instance.cc  LogicalDevice.cc  PhysicalDevice.cc  Presentation.cc  Queues.cc  RenderPass.cc  Surface.cc  SwapChain.cc  Texture.cc  Validation.cc
Shaders/: VertBuffer.cc
